--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -20,14 +20,14 @@
         <li class="footer-media__item">
           <a href="#" class="footer-media__link">
             <svg class="footer-media__svg">
-              <use href="/src/images/icons/symbol-defs.svg#icon-twitter"></use>
+              <use href="/src/images/icons/symbol-defs.svg#icon-instagram"></use>
             </svg>
           </a>
         </li>
         <li class="footer-media__item">
           <a href="#" class="footer-media__link">
             <svg class="footer-media__svg">
-              <use href="/src/images/icons/symbol-defs.svg#icon-instagram"></use>
+              <use href="/src/images/icons/symbol-defs.svg#icon-twitter"></use>
             </svg>
           </a>
         </li>
@@ -39,7 +39,7 @@
     
       <ul class="footer-nav-list">
         <li class="footer-nav-list__item">
-          <a href="#header" class="footer-nav-list__link">Home</a>
+          <a href="/" class="footer-nav-list__link">Home</a>
         </li>
         <li class="footer-nav-list__item">
           <a href="#proces" class="footer-nav-list__link">How it’s made?</a>
